Added action for "Reveal in Keyword Collection" and "Reveal in Keyword Collection & Solo"
- Added missing Snippets label
- Fixed commands sub-text logic
- Moved `ninjaPasteboardCopy` into the Pasteboard Manager
- Closes #617

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -909,6 +909,7 @@
         "global_pasteboard_action": "Text Pasteboard History",
         "global_screencapture_action": "Screen Capture",
         "global_scripts_action": "AppleScript",
+        "global_snippets_action": "Snippets",
         "global_streamDeckbanks_action": "Stream Deck Banks",
         "global_touchbarbanks_action": "Touch Bar Banks",
         "global_widgets_action": "Global Touch Bar Widgets",
@@ -1355,6 +1356,10 @@
         "restore": "Restore",
         "restoreBrowserLayoutForSelectedCollection_title": "Restore Browser Layout for Selected Collection",
         "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
+        "revealInKeywordCollection": "Reveal in Keyword Collection",
+        "revealInKeywordCollectionAndSolo": "Reveal in Keyword Collection & Solo",
+        "revealInKeywordCollectionAndSoloDescription": "Reveals the currently selected timeline clip in a specific Browser Keyword Collection & solo's it",
+        "revealInKeywordCollectionDescription": "Reveals the currently selected timeline clip in a specific Browser Keyword Collection",
         "reverse": "Reverse",
         "right": "Right",
         "rightClickToAssignAction": "You can right click on this button to assign an action to it.",
