Fixed @stickler-ci error
- Added i18n values
- Commented out WIP code

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -935,6 +935,7 @@
         "helpandsupport_group": "Help & Support",
         "helpTranslateCommandPost": "Help Translate CommandPost",
         "hiddenFinalCutProPreferences": "Hidden Final Cut Pro Preferences",
+        "hideKeyword": "Hide Keyword",
         "hideRejected": "Hide Rejected",
         "high": "High",
         "highlightedItem": "Highlighted Item",
@@ -1356,6 +1357,7 @@
         "restore": "Restore",
         "restoreBrowserLayoutForSelectedCollection_title": "Restore Browser Layout for Selected Collection",
         "restoreBrowserLayoutToMemory": "Restore Browser Layout to Memory",
+        "restoreHiddenKeyword": "Restore Hidden Keyword",
         "revealInKeywordCollection": "Reveal in Keyword Collection",
         "revealInKeywordCollectionAndSolo": "Reveal in Keyword Collection & Solo",
         "revealInKeywordCollectionAndSoloDescription": "Reveals the currently selected timeline clip in a specific Browser Keyword Collection & solo's it",
