Added Favourites to "Reveal in Keyword Collection" popup
- Added better error handling to `cp.tools.tableCount()`
- Added in missing documentation

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -644,6 +644,7 @@
         "favorites": "Favorites",
         "favourite": "Favourite",
         "favouriteFolderError": "There is no favourite folder currently saved for this action.\n\nPlease save a favourite folder for this action and try again.",
+        "favouriteKeyword": "Favourite Keyword",
         "favourites": "Favourites",
         "fcpMediaFolder_Error_NoFiles": "No files were provided to import.",
         "fcpMediaFolder_Error_ProjectRequired": "There must be a Project or Compound Clip in the Timeline.",
@@ -1329,6 +1330,7 @@
         "relative": "Relative",
         "reload": "Reload",
         "rememberLastQuery": "Remember Last Query",
+        "removeFavouriteKeyword": "Remove Favourite Keyword",
         "renameButton": "Rename Button",
         "renameButtonQuestion": "What would you like to rename this button to?",
         "renderComplete": "Render Complete!",
