Changed the donations link from PayPal to CommandPost.io
- Closes #2106

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -567,7 +567,6 @@
         "distance": "Distance",
         "distort": "Distort",
         "dockIcon": "Dock Icon",
-        "donateToDevelopers": "Paypal Donation to Developers",
         "done": "Done",
         "down": "Down",
         "downloadTangentHub": "Download Tangent Hub",
@@ -1555,6 +1554,7 @@
         "softLight9": "SoftLight",
         "softness": "Softness",
         "sound": "Sound",
+        "sponsorCommandPost": "Sponsor CommandPost",
         "stabilizationMethod": "Stabilization Method",
         "start": "Start",
         "startScan": "Start Scan",
