Added actions for "Go to Next/Previous Frame (with muted audio)"
- Closes #2113

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -918,6 +918,10 @@
         "goToBeginning": "Go to Beginning",
         "goToColorInspector": "Go to Color Inspector",
         "goToEnd": "Go to End",
+        "goToNextFrameWithMutedAudio": "Go to Next Frame (with muted audio)",
+        "goToNextFrameWithMutedAudioDescription": "Move the playhead to the next frame with muted audio.",
+        "goToPreviousFrameWithMutedAudio": "Go to Previous Frame (with muted audio)",
+        "goToPreviousFrameWithMutedAudioDescription": "Move the playhead to the previous frame with muted audio.",
         "goToRangeEnd": "Go to Range End",
         "goToRangeStart": "Go to Range Start",
         "gradient": "Gradient",
