Improved Plugin Load Times
- Increased the slow plugin warning threshold from 0.1 to 1.
- The Rename Clip plugin now uses CommandPost’s i18n for the title
rather than FCPX’s strings table.
- Wrapped a lot of actions in functions to improve boot time.
- Closes #2074

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1336,6 +1336,7 @@
         "removeFavouriteKeyword": "Remove Favourite Keyword",
         "renameButton": "Rename Button",
         "renameButtonQuestion": "What would you like to rename this button to?",
+        "renameClip": "Rename Clip",
         "renderComplete": "Render Complete!",
         "replace": "Replace",
         "replaceAll": "Replace All",
