--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -967,6 +967,13 @@
         "humRemoval": "Hum Removal",
         "icon": "Icon",
         "identification": "Identification",
+        "iftttAPIKey": "Webhook API Key",
+        "iftttEnableNotifications": "Enable IFTTT Integration",
+        "iftttEventName": "Webhook Event Name",
+        "iftttGetAPIKey": "Get Webhook API Key",
+        "iftttNotifications": "IFTTT",
+        "iftttServerFailed": "IFTTT server connection error",
+        "iftttSignup": "Signup for an IFTTT account",
         "ignore": "Ignore",
         "ignoreBackgroundTasks": "Ignore Background Tasks Warning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
