Added workaround for "Change Duration" menu item action
- Added ability to have override functions for Final Cut Pro menu item
actions.
- Now uses `fcp:doShow()` instead of `fcp:launch()` to ensure that FCPX
is active before menu item is triggered.
- Added an error message if a menu item could not be triggered
successfully.
- Closes #2133

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -1094,6 +1094,7 @@
         "menubarPanelLabel": "Menubar",
         "menubarPanelTooltip": "Menubar Preferences",
         "menuChoiceSubText": "Menu: %{path}",
+        "menuItemCouldNotBeTriggeredSuccessfully": "The menu item could not be triggered successfully.",
         "method": "Method",
         "methods": "Methods",
         "middle": "Middle",
