Cleaned up IFTTT plugin
- Closes #2142

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -971,9 +971,9 @@
         "iftttEnableNotifications": "Enable IFTTT Integration",
         "iftttEventName": "Webhook Event Name",
         "iftttGetAPIKey": "Get Webhook API Key",
-        "iftttNotifications": "IFTTT",
-        "iftttServerFailed": "IFTTT server connection error",
-        "iftttSignup": "Signup for an IFTTT account",
+        "iftttNotifications": "IFTTT Notifications",
+        "iftttServerFailed": "IFTTT Server Connection Error",
+        "iftttSignup": "Signup for a IFTTT Account",
         "ignore": "Ignore",
         "ignoreBackgroundTasks": "Ignore Background Tasks Warning",
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignore ESC Key when Final Cut Pro is Fullscreen",
