Add actions to select topmost library & active library
- Added some missing plugin labels
- Closes #2134

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -715,6 +715,7 @@
         "finalcutpro_browser_layouts_label": "Browser: Save & Restore Layouts",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
         "finalcutpro_browser_playhead_label": "Browser: Playhead Features",
+        "finalcutpro_browser_selectlibrary_label": "Browser: Select Library",
         "finalcutpro_browser_soloclip_label": "Browser: Solo Clip",
         "finalcutpro_commands_actions_label": "Commands Actions",
         "finalcutpro_commands_label": "Final Cut Pro Keyboard Commands",
@@ -774,6 +775,7 @@
         "finalcutpro_midi_controls_video_label": "MIDI Controls: Video Inspector",
         "finalcutpro_midi_controls_zoom_label": "MIDI Controls: Timeline Zoom",
         "finalcutpro_midi_manager_label": "Manager: MIDI",
+        "finalcutpro_notifications_ifttt_label": "Notifications: IFTTT",
         "finalcutpro_notifications_imessage_label": "Notifications: iMessage",
         "finalcutpro_notifications_manager_label": "Manager: Notifications",
         "finalcutpro_notifications_prowl_label": "Notifications: Prowl",
@@ -786,6 +788,7 @@
         "finalcutpro_preferences_general_label": "Preferences: General",
         "finalcutpro_preferences_manager_label": "Preferences: Panel Manager",
         "finalcutpro_preferences_scanfinalcutpro_label": "Preferences: Scan Final Cut Pro",
+        "finalcutpro_preferences_spelling_label": "Preferences: Spelling",
         "finalcutpro_setup_scan_label": "Setup: Final Cut Pro Plugin Scan",
         "finalcutpro_setup_unsupportedversion_label": "Setup: Unsupported Version Check",
         "finalcutpro_streamdeck_label": "Stream Deck",
@@ -1433,6 +1436,7 @@
         "sections": "Sections",
         "segments": "Segments",
         "select": "Select",
+        "selectActiveLibraryInBrowser": "Select Active Library in Browser",
         "selectAFolderToSaveCSV": "Please select a folder to save the CSV to",
         "selectCompressorDestination": "Select a Destination Folder:",
         "selectCompressorSettingsFile": "Select a Compressor Settings File:",
@@ -1451,6 +1455,7 @@
         "selectMiddleOfPreviousClipInSameStoryline": "Select Middle of Previous Clip In Same Storyline",
         "selectRightAudioEdge": "Select Right Audio Edge",
         "selectRightEdge": "Select Right Edge",
+        "selectTopmostLibraryInBrowser": "Select Topmost Library in Browser",
         "selectVoice": "Select Voice",
         "selfShadows": "Self Shadows",
         "send": "Send",
